<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_examples</name>
  <version>0.2.1</version>
  <description>
    A collection of examples that uses the navground core and sim libraries from C++.
  </description>
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>MIT</license>  
  <buildtool_depend>cmake</buildtool_depend>
  <depend>navground_core</depend>
  <depend>navground_sim</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
