<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_examples_py</name>
  <version>0.1.0</version>
  <description>
    A collection of examples that uses the navground core and sim libraries from Python.
  </description>
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>MIT</license>
  <depend>navground_core_py</depend>
  <depend>navground_sim_py</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
