[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navground_minimal_plugin_py"
dependencies = [
  "navground"
]
version = "0.5.0"

authors = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"},
]
maintainers = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"}
]
description = "A minimal example of a Python plugin"


[project.entry-points.navground_behaviors]
minimal = "navground_minimal_plugin_py:MinimalBehavior"

[tool.setuptools.packages.find]
where = ["."]