<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_sim</name>
  <version>0.0.4</version>
  <description>
    The hl navigation simulation
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>navground_core</depend>
  <depend>navground_py</depend>

  <build_depend>Python3</build_depend>
  <build_depend>GEOS</build_depend>
  <build_depend>pybind11</build_depend>
  <build_depend>HighFive</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
