<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_sim</name>
  <version>0.1.0</version>
  <description>
    The navground simulation library
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>navground_core</depend>
  <depend>GEOS</depend>
  <depend>HighFive</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

