<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_sim_py</name>
  <version>0.5.1</version>
  <description>
    The navground simulation library: python bindings and package
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>pybind11</build_depend>
  <depend>Python3</depend>
  <depend>navground_sim</depend>
  <depend>navground_core_py</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
