[options]
install_requires =
    numpy
[options.entry_points]
console_scripts =
    info = navground.sim.info:main
    echo = navground.sim.echo:main
    schema = navground.sim.print_schema:main
    validate = navground.sim.validate:main
    plugins = navground.sim.list_plugins:main
    sample = navground.sim.sample:main
    run = navground.sim.run:main
    run_rt = navground.sim.run_rt:main
    replay = navground.sim.replay:main
    record_video = navground.sim.record_video:main
    navground_py = navground.sim.main:main

