# TODO(jerome): add data, which is basically just sim ui templates

[build-system]
requires = ["setuptools >= 61.0",  "cmake_build_extension", "wheel", "setuptools-git-versioning>=2.0,<3", 'pybind11_mkdoc @ git+https://github.com/jeguzzi/pybind11_mkdoc@rst']
build-backend = "setuptools.build_meta"

[project]
name = "navground"
dependencies = [
  "numpy>=1.21",
  "PyYaml"
]

requires-python = ">=3.10"
authors = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"},
]
maintainers = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"}
]
description = "A playground to experiment with navigation algorithms."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [""]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
  'tqdm',
  'h5py',
  'websockets',
  'cairosvg',
  'moviepy',
  'Jinja2',
  'jsonschema>=4.18',
  'shapely'
]

[project.urls]
Homepage = "https://github.com/idsia-robotics/navground"
Documentation = "https://idsia-robotics.github.io/navground"
Repository = "https://github.com/idsia-robotics/navground.git"
"Bug Tracker" = "https://github.com/idsia-robotics/navground/issues"
Changelog = "https://github.com/idsia-robotics/navground/blob/main/CHANGELOG.md"

[project.scripts]
navground_py = "navground.sim.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"navground.sim.ui.templates" = ["*"]

[tool.distutils.bdist_wheel]
universal = false

[tool.setuptools-git-versioning]
enabled = true
# starting_version = "0.7.0"
version_file = "VERSION.txt"
count_commits_from_version_file = true
dev_template = "{tag}.dev{ccount}"
# dev_template = "{tag}+{branch}{ccount}"
dirty_template = "{tag}.dev{ccount}"
# dirty_template = "{tag}+{branch}{ccount}"
